--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/pg": "^8.15.2",
     "bcrypt": "^6.0.0",
+    "cookie": "^1.0.2",
     "dotenv": "^16.5.0",
     "next": "15.3.2",
     "pg": "^8.16.0",
@@ -22,6 +23,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
