--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/pg": "^8.15.2",
+    "@types/sax": "^1.2.7",
     "bcrypt": "^6.0.0",
     "cookie": "^1.0.2",
     "dotenv": "^16.5.0",
@@ -17,6 +18,7 @@
     "pg": "^8.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sax": "^1.4.1",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
